Fix wrong padding in figcaption.

--- a/src/scss/base/_generic.scss
+++ b/src/scss/base/_generic.scss
@@ -317,3 +317,10 @@ a.reversefootnote {
   padding: 1em;
   margin: 0px auto;
 }
+
+@media only screen and (max-width: 720px) {
+  figure figcaption {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
